Don't display info when encoding on stdout.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,28 +3,28 @@
 #
 
 XPREFIX=
-CXX=$(XPREFIX)g++
-CC=$(XPREFIX)gcc
-STRIP=$(XPREFIX)strip
-AR=$(XPREFIX)ar
-CFLAGS=-fno-exceptions -Wall -O2 -fsigned-char -m32
-INCLUDE=-I.
-LIBS=-lm
-LIBDIRS=
+CXX = $(XPREFIX)g++
+CC = $(XPREFIX)gcc
+STRIP = $(XPREFIX)strip
+AR = $(XPREFIX)ar
+CFLAGS = -fno-exceptions -Wall -O2 -fsigned-char -m32
+INCLUDE = -I.
+LIBS = -lm
+LIBDIRS =
 
 
-APPNAME=shineenc
-STNAME=libshine-fxp.la
-SONAME=libshine-fxp.so.1
-LIBNAME=$(SONAME).0.0
+APPNAME = shineenc
+STNAME = libshine-fxp.la
+SONAME = libshine-fxp.so.1
+LIBNAME = $(SONAME).0.0
 
-C_SRCS=$(wildcard *.c)
-OBJFILES=$(C_SRCS:.c=.o)
+C_SRCS = $(wildcard *.c)
+OBJFILES = $(C_SRCS:.c=.o)
 
-#don''t need wav or main in library
-LIBOBJS=$(shell echo $(OBJFILES) | sed -e "s/Main.o//" -e "s/wave.o//")
+#don't need wav or main in library
+LIBOBJS = $(shell echo $(OBJFILES) | sed -e "s/main.o//" -e "s/wave.o//")
 
-all: default
+all: $(APPNAME)
 
 .c.o:
 	$(CC) $(CFLAGS) $(INCLUDE) -c $<
@@ -35,8 +35,8 @@ library: $(LIBOJBS)
 	$(CC) $(CFLAGS) -shared -Wl,-soname,$(SONAME) -o $(LIBNAME) $(LIBOBJS) $(LIBDIRS) -lc -lm
 	$(AR) rcs $(STNAME) $(LIBOBJS)
 
-$(APPNAME): $(OBJFILES) library
-	$(CC) $(CFLAGS) $(INCLUDE) -o $(APPNAME) $(OBJFILES) $(LIBDIRS) $(LIBS) $(STNAME)
+$(APPNAME): $(OBJFILES)
+	$(CC) $(CFLAGS) $(INCLUDE) -o $(APPNAME) $(OBJFILES) $(LIBDIRS) $(LIBS)
 
 release:
 	$(STRIP) -s $(APPNAME)
