Cleaner build and source layout..

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,33 @@ src/shineenc
 src/tables.lo
 src/tables.o
 src/wave.o
+.libs/
+libshine.la
+shineenc
+src/bin/.deps/
+src/bin/.dirstamp
+src/bin/shineenc-main.o
+src/bin/shineenc-wave.o
+src/lib/.deps/
+src/lib/.dirstamp
+src/lib/.libs/
+src/lib/bitstream.lo
+src/lib/bitstream.o
+src/lib/formatbits.lo
+src/lib/formatbits.o
+src/lib/huffman.lo
+src/lib/huffman.o
+src/lib/l3bitstream.lo
+src/lib/l3bitstream.o
+src/lib/l3loop.lo
+src/lib/l3loop.o
+src/lib/l3mdct.lo
+src/lib/l3mdct.o
+src/lib/l3subband.lo
+src/lib/l3subband.o
+src/lib/layer3.lo
+src/lib/layer3.o
+src/lib/reservoir.lo
+src/lib/reservoir.o
+src/lib/tables.lo
+src/lib/tables.o
