--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
 AC_INIT([shine],[0.1.0],[savonet-users@lists.sourceforge.net])
-AM_INIT_AUTOMAKE([shine], [0.1.0])
+AM_INIT_AUTOMAKE([subdir-objects])
 LT_INIT
-AC_OUTPUT([Makefile src/Makefile])
+AC_OUTPUT([Makefile])
