Start cleaning out library vs. binary headers.

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,10 +7,7 @@ libshine_la_SOURCES  = src/lib/bitstream.c src/lib/formatbits.c src/lib/huffman.
 											 src/lib/tables.c
 libshine_la_LDFLAGS  = -version-info 1:0:0
 libshine_ladir       = shine
-libshine_la_HEADERS  = src/lib/bitstream.h src/lib/formatbits.h src/lib/g_includes.h \
-											 src/lib/huffman.h src/lib/l3bitstream.h src/lib/l3loop.h \
-											 src/lib/l3mdct.h src/lib/l3subband.h src/lib/layer3.h \
-											 src/lib/reservoir.h src/lib/tables.h src/lib/types.h src/lib/wave.h
+libshine_la_HEADERS  = src/lib/layer3.h src/lib/types.h
 
 bin_PROGRAMS     = shineenc
 shineenc_SOURCES = src/bin/main.c src/bin/wave.c
