Added pkg-conf file, started md README.

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,3 +15,6 @@ shineenc_SOURCES = src/bin/main.c src/bin/wave.c
 shineenc_LDADD   = libshine.la
 shineenc_CFLAGS  = -Isrc/lib
 shineenc_LDFLAGS = -lm
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = shine.pc
