--- a/configure.ac
+++ b/configure.ac
@@ -2,4 +2,4 @@ AC_INIT([shine],[0.1.0],[savonet-users@lists.sourceforge.net])
 AM_INIT_AUTOMAKE([subdir-objects])
 LT_INIT
 AC_CONFIG_MACRO_DIR([m4])
-AC_OUTPUT([Makefile])
+AC_OUTPUT([Makefile shine.pc])
