Bring back some compiler options, fix some warnings.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,11 +1,14 @@
 AUTOMAKE_OPTIONS = foreign
 ACLOCAL_AMFLAGS  = -I m4
 
+CFLAGS = -fno-exceptions -Wall -O2 -fsigned-char
+
 lib_LTLIBRARIES      = libshine.la
 libshine_la_SOURCES  = src/lib/bitstream.c src/lib/formatbits.c src/lib/huffman.c \
-											 src/lib/l3bitstream.c src/lib/l3loop.c src/lib/l3mdct.c \
-											 src/lib/l3subband.c src/lib/layer3.c src/lib/reservoir.c \
-											 src/lib/tables.c
+                       src/lib/l3bitstream.c src/lib/l3loop.c src/lib/l3mdct.c \
+                       src/lib/l3subband.c src/lib/layer3.c src/lib/reservoir.c \
+                       src/lib/tables.c
+
 libshine_la_LDFLAGS  = -version-info 1:0:0
 libshine_ladir       = ${prefix}/include/shine
 libshine_la_HEADERS  = src/lib/layer3.h
