--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 AUTOMAKE_OPTIONS = foreign
 ACLOCAL_AMFLAGS  = -I m4
 
-CFLAGS = -fno-exceptions -Wall -O2 -fsigned-char
+CFLAGS = @CFLAGS@ -fno-exceptions -Wall -O2 -fsigned-char
 
 lib_LTLIBRARIES      = libshine.la
 libshine_la_SOURCES  = src/lib/bitstream.c src/lib/formatbits.c src/lib/huffman.c \
