--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,7 @@ libshine_la_SOURCES  = src/lib/bitstream.c src/lib/formatbits.c src/lib/huffman.
                        src/lib/l3subband.c src/lib/layer3.c src/lib/reservoir.c \
                        src/lib/tables.c
 
-libshine_la_LDFLAGS  = -version-info 1:0:0
+libshine_la_LDFLAGS  = -lm -version-info 1:0:0
 libshine_ladir       = ${prefix}/include/shine
 libshine_la_HEADERS  = src/lib/layer3.h
 
@@ -17,7 +17,6 @@ bin_PROGRAMS     = shineenc
 shineenc_SOURCES = src/bin/main.c src/bin/wave.c
 shineenc_LDADD   = libshine.la
 shineenc_CFLAGS  = -Isrc/lib
-shineenc_LDFLAGS = -lm
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = shine.pc
