--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,7 @@
 .PHONY : android
 
+EXTRA_DIST = src/lib/*.h src/bin/*.h README* libshine.sym
+
 AUTOMAKE_OPTIONS = foreign
 ACLOCAL_AMFLAGS  = -I m4
 
