--- a/shine.pc.in
+++ b/shine.pc.in
@@ -5,6 +5,6 @@ libdir=${exec_prefix}/lib
 
 Name: shine
 Description: Fixed-point mp3 encoding library.
-Version: 1.0.0
+Version: @VERSION@
 Cflags: -I${includedir}
 Libs: -L${libdir} -lm -lshine
