--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*~
 *.swp
 obj
 libs
@@ -16,6 +17,15 @@ config.log
 config.status
 config.sub
 configure
+debian/libshine-dbg
+debian/libshine-dev
+debian/libshine
+debian/files
+debian/*.substvars
+debian/*.debhelper
+debian/*.log
+debian/stamp-*
+debian/tmp
 depcomp
 install-sh
 libtool
@@ -83,4 +93,5 @@ src/lib/tables.o
 shine-*.tar.gz
 *.bc
 *.mp3
+*.cdbs-orig
 node_modules
