--- a/.gitignore
+++ b/.gitignore
@@ -1,87 +1,98 @@
-*.swp
-obj
-libs
-compile
-android/lib
-android/include
-android/bin
-shine
-shine.pc
-m4
-/Makefile
-Makefile.in
-aclocal.m4
-autom4te.cache/
-config.guess
-config.log
-config.status
-config.sub
-configure
-depcomp
-install-sh
-libtool
-ltmain.sh
-missing
-src/.deps/
-src/.libs/
-src/unused
-src/Makefile
-src/Makefile.in
-src/bitstream.lo
-src/bitstream.o
-src/formatbits.lo
-src/formatbits.o
-src/huffman.lo
-src/huffman.o
-src/l3bitstream.lo
-src/l3bitstream.o
-src/l3loop.lo
-src/l3loop.o
-src/l3mdct.lo
-src/l3mdct.o
-src/l3subband.lo
-src/l3subband.o
-src/layer3.lo
-src/layer3.o
-src/libshine.la
-src/main.o
-src/reservoir.lo
-src/reservoir.o
-src/shineenc
-src/tables.lo
-src/tables.o
-src/wave.o
-.libs/
-libshine.la
-shineenc
-src/bin/.deps/
-src/bin/.dirstamp
-src/bin/shineenc-main.o
-src/bin/shineenc-wave.o
-src/lib/.deps/
-src/lib/.dirstamp
-src/lib/.libs/
-src/lib/bitstream.lo
-src/lib/bitstream.o
-src/lib/formatbits.lo
-src/lib/formatbits.o
-src/lib/huffman.lo
-src/lib/huffman.o
-src/lib/l3bitstream.lo
-src/lib/l3bitstream.o
-src/lib/l3loop.lo
-src/lib/l3loop.o
-src/lib/l3mdct.lo
-src/lib/l3mdct.o
-src/lib/l3subband.lo
-src/lib/l3subband.o
-src/lib/layer3.lo
-src/lib/layer3.o
-src/lib/reservoir.lo
-src/lib/reservoir.o
-src/lib/tables.lo
-src/lib/tables.o
-shine-*.tar.gz
-*.bc
-*.mp3
-node_modules
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+
+# Fortran module files
+*.mod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.out
+*.app
+
+# =========================
+# Operating System Files
+# =========================
+
+# OSX
+# =========================
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows
+# =========================
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# C++ builder related
+*.*proj
+*.zip
+*.z
+*.local
+__history
+tests
+Win32
+*.res
+*.i??
+*.map
+*.tds
+config.xml
+*.bat
+*-idx*
+*.save*
+tests/
+sonos/
+misc/
+application/bin/
+bin.old/
+#plugin/Bin
+/repo*.xml
+/package*.*
+alpha/
+_backup/
+
+
