--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,12 @@ jobs:
       run: ./configure
     - name: make
       run: make
-    - name: make install
+    - name: make install on macos
+      if: matrix.os == 'macos-latest'
       run: make install
+    - name: make install on ubuntu
+      if: matrix.os == 'ubuntu-latest'
+      run: sudo make install
       
   android_build:
     runs-on: ubuntu-latest
