--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,3 +55,13 @@ jobs:
       run: ./configure
     - name: make android
       run: make android   
+
+  js_build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: lovasoa/setup-emscripten@master
+    - name: JS build
+      run: |
+        cd js
+        make
