--- a/js/Makefile
+++ b/js/Makefile
@@ -1,7 +1,7 @@
 # Emscriptem compilation
 
 EMCC:=emcc
-EXPORTED_FUNCTIONS:='["_shine_check_config", "_shine_js_init",\
+EXPORTED_FUNCTIONS:='["_malloc", "_free", "_shine_check_config", "_shine_js_init",\
 	"_shine_samples_per_pass", "_shine_encode_buffer",\
   "_shine_flush", "_shine_close"]'
 CFLAGS:=-O3
@@ -10,15 +10,15 @@ LINKFLAGS:=-s EXPORTED_FUNCTIONS=$(EXPORTED_FUNCTIONS) --memory-init-file 0 $(CF
 C_FILES:=$(wildcard ../src/lib/*.c) src/wrapper.c
 HEADER_FILES:=$(wildcard ../src/lib/*.h)
 SOURCES:=$(C_FILES) $(HEADER_FILES)
-OBJECTS:=$(C_FILES:%.c=%.bc)
+OBJECTS:=$(C_FILES:%.c=%.o)
 
 all: dist/libshine.js
 
 dist/libshine.js: $(SOURCES) $(OBJECTS) src/pre.js src/post.js
 	$(EMCC) $(LINKFLAGS) --pre-js src/pre.js --post-js src/post.js $(OBJECTS) -o $@
 
-%.bc: %.c
+%.o: %.c
 	$(EMCC) $(CFLAGS) -I../src/lib -c $< -o $@
 
 clean:
-	rm -f *.bc ../src/lib/*.bc
+	rm -f *.o ../src/lib/*.o
