--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,3 +65,11 @@ jobs:
       run: |
         cd js
         make
+    - uses: actions/setup-node@v3
+      with:
+        cache: 'npm'
+    - name: Run node test
+      run: |
+        cd js/test/node
+        npm install
+        npm run test
