--- a/js/package.json
+++ b/js/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/toots/shine#readme",
   "devDependencies": {
     "prettier": "^2.8.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
