--- a/js/package.json
+++ b/js/package.json
@@ -2,15 +2,9 @@
   "name": "@toots/shine.js",
   "version": "1.0.1",
   "description": "Shine fixed-point mp3 encoder",
-  "types": "libshine.js",
-  "main": "dist/libshine.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "ts-node ./test.ts",
-    "format": "prettier '**/*.{ts,tsx,js,jsx}' --write"
-  },
+  "main": "dist/libshine_node.js",
+  "browser": "dist/libshine_browser.js",
+  "types": "libshine.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toots/shine.git"
@@ -26,10 +20,5 @@
   "bugs": {
     "url": "https://github.com/toots/shine/issues"
   },
-  "homepage": "https://github.com/toots/shine#readme",
-  "devDependencies": {
-    "prettier": "^2.8.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
-  }
+  "homepage": "https://github.com/toots/shine#readme"
 }
